--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "Deep Learning Using PyTorch"
+title: "Deep Learning Practices"
 author: "Yash Mishra"
-copyright: "2024"
+copyright: "2025"
 logo: ""
 language: "en"
 execute:
   execute_notebooks: "auto"
   
 repository:
-  url: https://github.com/the-y9/Deep-Learning-using-PyTorch
+  url: https://github.com/the-y9/Deep-Learning-Practices
 
 html:
   use_issues_button: true
